scripts/k8s/google/04-frontend.yml
---
# Source: botium-speech-processing/templates/04-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 56000
      targetPort: 56000
  selector:
    name: frontend
    app: botium-speech-processing
---
# Source: botium-speech-processing/templates/04-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    name: frontend
    app: botium-speech-processing
    tier: frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: frontend
      app: botium-speech-processing
  template:
    metadata:
      labels:
        name: frontend
        app: botium-speech-processing
        tier: frontend
    spec:
      volumes:
        - name: botium-speech-processing-storage
          persistentVolumeClaim:
            claimName: botium-speech-processing-claim
      containers:
        - name: frontend
          image: botium/botium-speech-frontend:latest
          ports:
            - name: frontend-56000
              containerPort: 56000
          volumeMounts:
            - mountPath: /app/resources
              name: botium-speech-processing-storage
