scripts/k8s/google/09-ingress.yml
---
# Source: botium-speech-processing/templates/09-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: speech-processing-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 56000
      host: <<FQDN Placeholder>>
